--- a/1_Ensemble_Methods.ipynb
+++ b/1_Ensemble_Methods.ipynb
@@ -91,16 +91,16 @@
     "# Stacking \n",
     "\n",
     "def Stacking(model,train,y,test,n_fold):\n",
-    "   folds=StratifiedKFold(n_splits=n_fold,random_state=1)\n",
-    "   test_pred=np.empty((test.shape[0],1),float)\n",
-    "   train_pred=np.empty((0,1),float)\n",
-    "   for train_indices,val_indices in folds.split(train,y.values):\n",
-    "      x_train,x_val=train.iloc[train_indices],train.iloc[val_indices]\n",
-    "      y_train,y_val=y.iloc[train_indices],y.iloc[val_indices]\n",
+    "    folds=StratifiedKFold(n_splits=n_fold,random_state=1)\n",
+    "    test_pred=np.empty((test.shape[0],1),float)\n",
+    "    train_pred=np.empty((0,1),float)\n",
+    "    for train_indices,val_indices in folds.split(train,y.values):\n",
+    "        x_train,x_val=train.iloc[train_indices],train.iloc[val_indices]\n",
+    "        y_train,y_val=y.iloc[train_indices],y.iloc[val_indices]\n",
     "\n",
-    "      model.fit(X=x_train,y=y_train)\n",
-    "      train_pred=np.append(train_pred,model.predict(x_val))\n",
-    "      test_pred=np.append(test_pred,model.predict(test))\n",
+    "        model.fit(X=x_train,y=y_train)\n",
+    "        train_pred=np.append(train_pred,model.predict(x_val))\n",
+    "        test_pred=np.append(test_pred,model.predict(test))\n",
     "    return test_pred.reshape(-1,1),train_pred\n"
    ]
   },
@@ -112,7 +112,7 @@
    },
    "outputs": [],
    "source": [
-    "# CReating 2 base models\n",
+    "# Creating 2 base models\n",
     "\n",
     "model1 = tree.DecisionTreeClassifier(random_state=1)\n",
     "\n",
@@ -145,7 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "Create a third model, logistic regression, on the predictions of the decision tree and knn models.\n",
+    "# Create a third model, logistic regression, on the predictions of the decision tree and knn models.\n",
     "\n",
     "df = pd.concat([train_pred1, train_pred2], axis=1)\n",
     "df_test = pd.concat([test_pred1, test_pred2], axis=1)\n",
@@ -222,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
